Form Submitted working

--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
 		"start": "node index.js",
 		"start-server": "cd server && npm start",
 		"start-client": "cd client && npm run dev",
-		"dev": "concurrently \"npm run start-server\" \"npm run start-client\" \"python app.py\""
+		"dev": "concurrently \"npm run start-server\" \"npm run start-client\" \"python3 server/OpenAI/app.py\""
 	}
 }
