--- a/client/package.json
+++ b/client/package.json
@@ -39,5 +39,6 @@
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "sharp": "0.33.1"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
