--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,8 @@
 	},
 	"dependencies": {
 		"cors": "^2.8.5",
-		"express": "^4.18.3"
+		"dotenv": "^16.4.5",
+		"express": "^4.18.3",
+		"openai": "^4.29.0"
 	}
 }
