--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.18.3",
-		"openai": "^4.29.0"
+		"openai": "^4.29.0",
+		"pdfkit": "^0.14.0"
 	}
 }
