--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
 		"start": "node index.js"
 	},
 	"dependencies": {
+		"blob-stream": "^0.1.3",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.18.3",
