heroku deployent package.json fix

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 		"concurrently": "^8.2.2"
 	},
 	"scripts": {
-		"start": "node index.js",
+		"start": "node server/index.js",
 		"start-server": "cd server && npm start",
 		"start-client": "cd client && npm run dev",
 		"dev": "concurrently \"npm run start-server\" \"npm run start-client\""
