--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"dev": "concurrently \"npm run start-server\" \"npm run start-client\""
 	},
 	"dependencies": {
-		"dotenv": "^16.4.5"
+		"dotenv": "^16.4.5",
+		"express": "^4.19.2"
 	}
 }
