--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
 	},
 	"dependencies": {
 		"dotenv": "^16.4.5",
-		"express": "^4.19.2"
+		"express": "^4.19.2",
+		"blob-stream": "^0.1.3",
+		"cors": "^2.8.5",
+		"openai": "^4.29.0",
+		"pdfkit": "^0.14.0"
 	}
 }
