--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
 		"start": "node server/index.js",
 		"start-server": "cd server && npm start",
 		"start-client": "cd client && npm run dev",
-		"dev": "concurrently \"npm run start-server\" \"npm run start-client\""
+		"dev": "concurrently \"npm run start-server\" \"npm run start-client\"",
+		"heroku-postbuild": "cd server && npm install"
 	},
 	"dependencies": {
+		"blob-stream": "^0.1.3",
+		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
-		"express": "^4.19.2"
+		"express": "^4.18.3",
+		"openai": "^4.29.0",
+		"pdfkit": "^0.14.0"
 	}
 }
