--- a/package.json
+++ b/package.json
@@ -10,11 +10,7 @@
 		"heroku-postbuild": "cd server && npm install"
 	},
 	"dependencies": {
-		"blob-stream": "^0.1.3",
-		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
-		"express": "^4.18.3",
-		"openai": "^4.29.0",
-		"pdfkit": "^0.14.0"
+		"express": "^4.18.3"
 	}
 }
