package.json updated

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
 		"start": "node server/index.js",
 		"start-server": "cd server && npm start",
 		"start-client": "cd client && npm run dev",
-		"dev": "concurrently \"npm run start-server\" \"npm run start-client\"",
-		"heroku-postbuild": "cd server && npm install"
+		"dev": "concurrently \"npm run start-server\" \"npm run start-client\""
 	},
 	"dependencies": {
 		"dotenv": "^16.4.5",
