package.json updated

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"start": "node server/index.js",
 		"start-server": "cd server && npm start",
 		"start-client": "cd client && npm run dev",
-		"dev": "concurrently \"npm run start-server\" \"npm run start-client\""
+		"dev": "concurrently \"npm run start-server\" \"npm run start-client\"",
+		"build": "cd client && npm run build"
 	},
 	"dependencies": {
 		"dotenv": "^16.4.5",
