--- a/amplify.yml
+++ b/amplify.yml
@@ -9,8 +9,9 @@ applications:
         build:
           commands:
             - npm run build
+            - npm run export
       artifacts:
-        baseDirectory: .next
+        baseDirectory: out
         files:
           - "**/*"
   # - backend:
