--- a/amplify.yml
+++ b/amplify.yml
@@ -10,7 +10,7 @@ applications:
           commands:
             - npm run build
       artifacts:
-        baseDirectory: out
+        baseDirectory: client/out
         files:
           - "**/*"
   # - backend:
