--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"build": "cd client && npm run build"
 	},
 	"dependencies": {
+		"aws-sdk": "^2.1594.0",
 		"dotenv": "^16.4.5",
 		"express": "^4.18.3"
 	}
