--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,10 @@
 		"build": "echo 'No build step required for pure Node.js app'"
 	},
 	"dependencies": {
+		"aws-sdk": "^2.1594.0",
 		"blob-stream": "^0.1.3",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
-		"express": "^4.18.3",
 		"openai": "^4.29.0",
 		"pdfkit": "^0.14.0"
 	}
